package org.pancakelab.model;

public enum Ingredient {
    DARK_CHOCOLATE,
    MILK_CHOCOLATE,
    HAZELNUTS,
    MUSTARD,
    WHIPPED_CREAM
}
