package org.pancakelab.model;

public enum OrderStatus {
    NEW,
    PREPARING,
    PREPARED,
    DELIVERING,
    DELIVERED,
    CANCELLED
}
